--- a/manifest.JSON
+++ b/manifest.JSON
@@ -1,5 +1,5 @@
 {
-  "name": "Hello Extensions",
+  "name": "QuickHistory",
   "description": "Base Level Extension",
   "version": "1.0",
   "manifest_version": 3,
